# lazy-programmer-RL-in-python

./: Makefile  README.md  pyproject.toml  requirements-dev.in  requirements.in
exercises/ch10_trading_bot/: linear_lr_trader.py  linear_rl_trader.py
exercises/ch2_bandits/ex5/: thompson_sampling_gaussian.py
exercises/ch5_DP/: __init__.py  grid_world.py  iterative_policy_evaluation_deterministic.py  iterative_policy_evaluation_probabilistic.py  policy_iteration_deterministic.py  policy_iteration_probabilistic.py
exercises/ch6_MC/: monte_carlo.py  monte_carlo_control.py  monte_carlo_control_epsilon_greedy.py
exercises/ch7_TD/: q_learning.py  sarsa.py
exercises/ch8_fn_approx/: approx_control.py  approx_prediction.py  cart_pole.py
exercises/ex1/: epsilon_greedy.py
exercises/ex2/: optimistic_starter.py
exercises/ex3/: ucb1.py
exercises/ex4/: thompson_sampling.py
rl1/exercises/ch10_trading_bot/: plot_rl_trader_rewards.py
rl1/exercises/ch2_bandits/ex1/: epsilon_greedy.py
rl1/exercises/ch5_DP/: iterative_policy_evaluation_probabilistic.py  policy_iteration_probabilistic.py  value_iteration.py
rl1/exercises/ch6_MC/: monte_carlo.py  monte_carlo_control.py
rl1/exercises/ch7_TD/: td0_prediction.py
rl1/exercises/ch8_fn_approx/: approx_prediction.py  cart_pole.py
rl2/exercises/ch3_basic_RL/: cart_pole_bins.py  cart_pole_rbf.py  cart_pole_tf.py  mountain_car_rbf.py
rl2/exercises/ch3_basic_RL/ex1/: cart_pole_bins.py
rl2/exercises/ch4_td_lambda/: mountain_car_n_step.py  mountain_car_td_lambda.py
rl2/exercises/ch5_policy_gradient/: cart_pole_tf_pg.py  mountain_car_cont_tf_pg.py
rl2/exercises/ch6_dqn/: breakout_dqn.py  cart_pole_dqn.py
