[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lazyprogrammer-rl-courses"
version = "0.0.0"
description = ""
authors = ["Chris Knight <chrisk314@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11" # 3.11 is the last version that works with tensorflow 2.13.0
click = "^8.1.6"
gym = {extras = ["accept-rom-license", "atari", "classic-control"], version = "^0.26.2"}
matplotlib = "^3.7.2"
nptyping = "^2.5.0"
numpy = "<=1.24.3" # 1.24.3 is the last version that works with tensorflow 2.13.0
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
flake8-pyproject = "^1.2.3"
tensorflow = "^2.13.0"
torch = {version = "^2.0.1+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.0.2+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.15.2+cu118", source = "pytorch-gpu-src"}

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.isort]
profile = "black"
src_paths = ["exercises/"]
multi_line_output = 3
force_grid_wrap = 0
wrap_length = 100
line_length = 100
use_parentheses = true
include_trailing_comma = true
force_sort_within_sections = true
sort_relative_in_force_sorted_sections = true
lines_after_imports = 2
order_by_type = false
case_sensitive = false
reverse_relative = true
sections = ["FUTURE","STDLIB","THIRDPARTY","LOCALFOLDER"]
no_lines_before = "LOCALFOLDER"
extend_skip = ["_version.py", "versioneer.py"]
extend_skip_glob = ["docs/*", "*venv*/*"]

[tool.black]
line-length = 100
include = '(src\/.*|tests\/.*|setup.py|exercises\/.*)'
extend-exclude = '(.*\/_version.py)'

[tool.flake8]
max-line-length = 100
max-doc-length = 80
ignore = "E226,E121,E123,E126,E24,E704,E203,E122,E127,E128,W504,E731,W605,F541,E741,F821,W503"
count = true
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,.venv"
show_source = true
statistics = true

[tool.mypy]
mypy_path = "exercises/"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
